# projeto-final-cce

./: CMakeLists.txt  README.md
Assets/Levels/: Level0.txt  level1.txt  level2.txt  level3.txt
Assets/Sprites/Capivaristo/: Capivaristo.json
Assets/Sprites/Croc/: Croc.json
Source/: AudioSystem.cpp  AudioSystem.h  Font.cpp  Font.h  Game.cpp  Game.h  Hud.cpp  Hud.h  Main.cpp
Source/Actors/: Actor.cpp  Actor.h  Background.cpp  Background.h  Floor.cpp  Floor.h  Mob.cpp  Mob.h  Player.cpp  Player.h  Spawner.cpp  Spawner.h  Wall.cpp  Wall.h  WallDetail.cpp  WallDetail.h
Source/Actors/Ghost/: Ghost.cpp
Source/Actors/Ghost/States/: ChaseState.cpp  DeadState.cpp  FrightenedState.cpp  GhostState.cpp  ScatterState.cpp
Source/Components/: Component.cpp  Component.h  RigidBodyComponent.cpp  RigidBodyComponent.h  StatBlock.cpp  StatBlock.h
Source/Components/AIComponents/: CrocChase.cpp  CrocChase.h  CrocWait.cpp  CrocWait.h  FSMComponent.cpp  FSMComponent.h  FSMState.h
Source/Components/ColliderComponents/: AABBColliderComponent.cpp  AABBColliderComponent.h  Hitbox.cpp  Hitbox.h
Source/Components/DrawComponents/: DrawAnimatedComponent.cpp  DrawAnimatedComponent.h  DrawComponent.cpp  DrawComponent.h  DrawSpriteComponent.cpp  DrawSpriteComponent.h  DrawTextComponent.cpp  DrawTextComponent.h
Source/Scenes/: Level1.cpp  Level1.h  Level2.cpp  Level2.h  Level3.cpp  Level3.h  Level4.cpp  Level4.h  Menu.cpp  Menu.h  Scene.cpp  Scene.h
